--- a/Lecture 03/lecture_3a - Renaming and recoding.ipynb
+++ b/Lecture 03/lecture_3a - Renaming and recoding.ipynb
@@ -114,7 +114,8 @@
    "outputs": [],
    "source": [
     "# Write your answer here\n",
-    "\n"
+    "# 1. \"alt\" means the altitute of the grand prix taking place.\n",
+    "# 2. \"varchar(255)\" represents the string."
    ]
   },
   {
@@ -584,7 +585,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your own code\n"
+    "# Write your own code\n",
+    "country_old = [\"UK\"]\n",
+    "country_new = [\"United Kingdom\"]\n",
+    "circuits[\"country\"] = circuits[\"country\"].replace(country_old, country_new)"
    ]
   },
   {
@@ -607,9 +611,9 @@
    "outputs": [],
    "source": [
     "# Write your own code\n",
-    "\n",
-    "\n",
-    "\n"
+    "# 1. \"lat\" refers as latitute and \"lng\" refers longtitute.\n",
+    "# 2. No, it doesn't have any string variables.\n",
+    "# 3. we cannot use \"str.isnumeric()\" here, cause there have some negative value in \"lat\" and \"lng\".\n"
    ]
   },
   {
@@ -805,7 +809,11 @@
    "outputs": [],
    "source": [
     "# Write your own code\n",
-    "\n",
+    "circuits[\"hemisphere\"] = pd.cut(circuits[\"lat\"],\n",
+    "                                bins = [-90, 0, 90],\n",
+    "                                right = True,\n",
+    "                                labels = [\"south\", \"north\"]\n",
+    "                                )\n",
     "\n",
     "\n",
     "\n"
@@ -828,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
