save file Lecture6

--- a/Lecture 06/Lecture 6b - Class Acitivity - Identifying HTML elements.ipynb
+++ b/Lecture 06/Lecture 6b - Class Acitivity - Identifying HTML elements.ipynb
@@ -139,12 +139,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1020398281.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    <select\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your answers as a comment\n",
-    "\n",
+    "<select\n",
+    "form-control\n",
+    "//*[@id=\"crit-srcdb\"]\n",
     "\n",
     "\n"
    ]
@@ -168,14 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1859753026.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[2], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    <a\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your answers as a comment\n",
-    "\n",
-    "\n",
-    "\n",
+    "<a\n",
+    "result result--group-start\n",
+    "/html/body/main/div[2]/div/div[3]/div[1]/a\n",
     "\n"
    ]
   }
@@ -196,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
