--- a/Lecture 05/Lecture 5c - Introduction to HTML.ipynb
+++ b/Lecture 05/Lecture 5c - Introduction to HTML.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1b/jzb9ndz97b5260fzr9d8kzyh5f7xd6/T/ipykernel_7444/957484008.py:4: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "/var/folders/yz/q33xv4fs0dq572js9z4gsb0h0000gn/T/ipykernel_2430/957484008.py:4: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML # Allows you to run HTML code from Python\n"
      ]
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "\n",
        "<html>\n",
        "    <body>\n",
-       "        <div class = \"semester\"> Fall  </div>\n",
+       "        <div class = \"semester\"> Fall </div>\n",
        "    </body>\n",
        "\n",
        "</html>\n"
@@ -240,7 +240,7 @@
     "\n",
     "<html>\n",
     "    <body>\n",
-    "        <div class = \"semester\"> Fall  </div>\n",
+    "        <div class = \"semester\"> Fall </div>\n",
     "    </body>\n",
     "\n",
     "</html>"
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -373,12 +373,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (4149699616.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[13], line 10\u001b[0;36m\u001b[0m\n\u001b[0;31m    border: 2px solid black;\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid decimal literal\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "%%HTML\n",
     "\n",
+    "<html>\n",
+    "    <head>\n",
+    "        <style>\n",
+    "            .city {\n",
+    "            background-color: orange;\n",
+    "            color: white;\n",
+    "            border: 2px solid black;\n",
+    "            margin: 20px;\n",
+    "            padding: 20px;\n",
+    "            }\n",
+    "        </style>\n",
+    "    </head>\n",
+    "    <body>\n",
+    "\n",
+    "        <div class=\"city\">\n",
+    "            Wuhan\n",
+    "        </div>\n",
+    "\n",
+    "        <div class=\"city\">\n",
+    "            Suzhou\n",
+    "        </div>\n",
+    "\n",
+    "    </body>\n",
+    "</html>\n",
     "\n"
    ]
   },
@@ -433,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
