--- a/Lecture 06/Lecture 6d - Website Interaction.ipynb
+++ b/Lecture 06/Lecture 6d - Website Interaction.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,13 +120,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['Fall 2024',\n",
+       " 'Spring 2025',\n",
        " 'Summer 2024',\n",
        " 'Spring 2024',\n",
        " 'Fall 2023',\n",
@@ -146,7 +147,7 @@
        " 'Spring 2019']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83\n"
+      "169\n"
      ]
     }
    ],
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -497,53 +498,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>78</th>\n",
+       "      <th>164</th>\n",
        "      <td>BIOL 212</td>\n",
        "      <td>Computational Modeling for Scientists and Engi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
+       "      <th>165</th>\n",
        "      <td>BIOL 212</td>\n",
        "      <td>Computational Modeling for Scientists and Engi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
+       "      <th>166</th>\n",
        "      <td>BIOL 212</td>\n",
        "      <td>Computational Modeling for Scientists and Engi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>81</th>\n",
+       "      <th>167</th>\n",
        "      <td>BIOL 212</td>\n",
        "      <td>Computational Modeling for Scientists and Engi...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
+       "      <th>168</th>\n",
        "      <td>BIOL 212</td>\n",
        "      <td>Computational Modeling for Scientists and Engi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>83 rows × 2 columns</p>\n",
+       "<p>169 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   coursecode                                         coursename\n",
-       "0    BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "1    BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "2    BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "3    BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "4    BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "..        ...                                                ...\n",
-       "78   BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "79   BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "80   BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "81   BIOL 212  Computational Modeling for Scientists and Engi...\n",
-       "82   BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "    coursecode                                         coursename\n",
+       "0     BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "1     BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "2     BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "3     BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "4     BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "..         ...                                                ...\n",
+       "164   BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "165   BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "166   BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "167   BIOL 212  Computational Modeling for Scientists and Engi...\n",
+       "168   BIOL 212  Computational Modeling for Scientists and Engi...\n",
        "\n",
-       "[83 rows x 2 columns]"
+       "[169 rows x 2 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
