--- a/Lecture 08/Lecture 8a - Review of Functions.ipynb
+++ b/Lecture 08/Lecture 8a - Review of Functions.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,25 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "36"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
     }
    ],
    "source": [
     "# Write your own code here\n",
+    "def function_f(x):\n",
+    "    f=x**2+2*x+1\n",
+    "    return f\n",
     "\n",
-    "\n",
-    "\n"
+    "print(function_f(3))    \n"
    ]
   },
   {
@@ -216,13 +215,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pass\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "def function_grade(numeric_grade):\n",
+    "    if numeric_grade >= 55:\n",
+    "        status = 'pass'\n",
+    "    else:\n",
+    "        status = 'fail'\n",
+    "    return status\n",
     "\n",
-    "\n"
+    "print(function_grade(60))"
    ]
   },
   {
@@ -246,25 +259,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Dear customerEric Wang, your car model Toyota is ready'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dear customer Jichun Zhao, your car model AMG_GT_BlackSeries is ready\n"
+     ]
     }
    ],
    "source": [
     "# Write your own code\n",
+    "def function_sentence(first_name, last_name, car_model):\n",
+    "    sentence = 'Dear customer ' + first_name + ' ' + last_name + ', your car model ' + car_model + ' is ready'\n",
+    "    return sentence\n",
     "\n",
-    "\n",
-    "\n"
+    "print(function_sentence(first_name='Jichun', last_name='Zhao', car_model='AMG_GT_BlackSeries'))\n"
    ]
   },
   {
@@ -295,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +316,7 @@
        "6"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -376,26 +388,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
     }
    ],
    "source": [
     "# Write your own code\n",
+    "def fn_iseligible_vote(age):\n",
+    "    return age>= 18\n",
     "\n",
     "\n",
-    "\n",
-    "\n"
+    "print(fn_iseligible_vote(16))\n",
+    "print(fn_iseligible_vote(20))\n"
    ]
   }
  ],
@@ -415,7 +427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4,
   "vscode": {
