--- a/Lecture 10/lecture_10a - Text Data.ipynb
+++ b/Lecture 10/lecture_10a - Text Data.ipynb
@@ -125,6 +125,7 @@
     {
      "data": {
       "text/plain": [
+       "category\n",
        "amendment                       1529\n",
        "house bill                       902\n",
        "senate bill                      514\n",
@@ -134,7 +135,7 @@
        "house concurrent resolution       20\n",
        "senate concurrent resolution      14\n",
        "senate joint resolution            8\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
      "execution_count": 4,
@@ -157,18 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "category\n",
        "house bill     902\n",
        "senate bill    514\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,25 +412,26 @@
        "[453 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#This will return a new DataFrame filtered_bills containing only the rows where the \"action\" column contains the word \"Senator\". \n",
     "bills[bills[\"action\"].str.contains(\"Senator\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/1b/jzb9ndz97b5260fzr9d8kzyh5f7xd6/T/ipykernel_56030/372703810.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/yz/q33xv4fs0dq572js9z4gsb0h0000gn/T/ipykernel_1283/372703810.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -458,14 +461,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Congress  bill_number bill_type  \\\n",
+      "485        116          123      sres   \n",
+      "486        116          135      sres   \n",
+      "487        116          142      sres   \n",
+      "488        116          152      sres   \n",
+      "489        116          183      sres   \n",
+      "...        ...          ...       ...   \n",
+      "1085       116          603      hres   \n",
+      "1086       116          603      hres   \n",
+      "1087       116          647      hres   \n",
+      "1088       116          770      hres   \n",
+      "1089       116          770      hres   \n",
+      "\n",
+      "                                                 action  \\\n",
+      "485   Committee on Foreign Relations. Reported by Se...   \n",
+      "486   Committee on Foreign Relations. Reported by Se...   \n",
+      "487   Committee on Foreign Relations. Reported by Se...   \n",
+      "488   Committee on Foreign Relations. Reported by Se...   \n",
+      "489   Committee on Foreign Relations. Reported by Se...   \n",
+      "...                                                 ...   \n",
+      "1085              Mr. Hoyer moved to table the measure.   \n",
+      "1086  QUESTION OF THE PRIVILEGES OF THE HOUSE - The ...   \n",
+      "1087              Mr. Hoyer moved to table the measure.   \n",
+      "1088              Mr. Hoyer moved to table the measure.   \n",
+      "1089  QUESTION OF THE PRIVILEGES OF THE HOUSE - The ...   \n",
+      "\n",
+      "                                main_action           category  member_id  \n",
+      "485   senate committee/subcommittee actions  senate resolution        505  \n",
+      "486   senate committee/subcommittee actions  senate resolution        505  \n",
+      "487   senate committee/subcommittee actions  senate resolution        505  \n",
+      "488   senate committee/subcommittee actions  senate resolution        505  \n",
+      "489   senate committee/subcommittee actions  senate resolution        505  \n",
+      "...                                     ...                ...        ...  \n",
+      "1085                    house floor actions   house resolution       1065  \n",
+      "1086                    house floor actions   house resolution       1560  \n",
+      "1087                    house floor actions   house resolution       1065  \n",
+      "1088                    house floor actions   house resolution       1065  \n",
+      "1089                    house floor actions   house resolution       1560  \n",
+      "\n",
+      "[294 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
-    "\n",
-    "\n",
-    "\n"
+    "category = [\"house resolution\", \"senate resolution\"]\n",
+    "resolutions = bills_actions.query('category in @category')\n",
+    "print(resolutions)\n"
    ]
   },
   {
@@ -483,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -715,9 +765,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "/var/folders/yz/q33xv4fs0dq572js9z4gsb0h0000gn/T/ipykernel_1283/754298073.py:4: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "  amendments[\"action\"].str.findall(\"Amdt\\.....\\D\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -735,7 +795,7 @@
        "Name: action, Length: 1529, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
