--- a/Lecture 24/Lecture 25 - Conda Environments.ipynb
+++ b/Lecture 24/Lecture 25 - Conda Environments.ipynb
@@ -215,14 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# For example, on the instructor's computer it would be\n",
     "# /Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files\n",
     "\n",
-    "directory = \"/Users/asanc31/Documents/GitHub/qtm531spring2024/Lecture 23/configuration_files\"\n"
+    "directory = \"/Users/jichunzhao/Documents/qtm2024fall/qtm530fall2024_Computing/Lecture 24/configuration_files\""
    ]
   },
   {
