--- a/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
+++ b/Lecture 02/Lecture 2a - Boolean variables and ifelse.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "False"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,9 @@
    ],
    "source": [
     "# Write down your solution!\n",
-    "\n",
+    "color_red = \"red\"\n",
+    "list_colors = [\"red\", \"green\", \"yellow\", \"orange\"]\n",
+    "print(color_red in list_colors)\n",
     "\n",
     "\n"
    ]
@@ -298,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -412,22 +414,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "False\n",
+      "True\n"
      ]
     }
    ],
    "source": [
     "# Write down your own solution\n",
     "\n",
-    "\n",
-    "\n",
+    "print(np.e **5 <50)\n",
+    "define_x = -1\n",
+    "print(define_x**2+2*define_x+1 == 0)\n",
     "\n"
    ]
   },
@@ -451,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +464,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +503,7 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +539,7 @@
        "True"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,14 +570,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
-    "\n",
-    "\n",
+    "age = 23\n",
+    "print(age <20 | age > 30)\n",
+    "not (age >= 25 and age<= 27)\n",
     "\n",
     "\n"
    ]
@@ -615,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -826,13 +849,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your solution to this problem\n",
+    "points = 47\n",
     "\n",
-    "\n",
+    "if points >=0 and points <= 54:\n",
+    "    print(\"F\")\n",
+    "elif points >= 55 and points <= 59:\n",
+    "    print(\"D\")\n",
+    "elif points >= 60 and points <= 64:\n",
+    "    print(\"C-\")\n",
+    "elif points >= 65 and points <= 69:\n",
+    "    print(\"C\")\n",
+    "elif points >= 70 and points <= 74:\n",
+    "    print(\"C+\")\n",
+    "elif points >= 75 and points <= 79:\n",
+    "    print(\"B-\")\n",
+    "elif points >= 80 and points <= 82:\n",
+    "    print(\"B\")\n",
+    "elif points >= 83 and points <= 87:\n",
+    "    print(\"B+\")\n",
+    "elif points >= 87 and points <= 92:\n",
+    "    print(\"A_\")\n",
+    "else:\n",
+    "    print(\"A\")\n",
     "\n",
     "\n",
     "\n",
@@ -861,12 +912,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is strictly less than 5\n"
+     ]
+    }
+   ],
    "source": [
     "# Write down your solution to this problem\n",
+    "numeric_vec = np.array( [1, 2, -1] )   \n",
     "\n",
+    "if sum(numeric_vec) > 5:\n",
+    "    print(\"The sum is greater than or equal to 5\")\n",
+    "else:\n",
+    "    print(\"It is strictly less than 5\")\n",
     "\n",
     "\n",
     "\n",
